--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+#Olanrewaju: Newly added line due to error Your project has set android.useAndroidX=true,
+# but configuration debugRuntimeClasspath still contains legacy support libraries, which may cause
+# runtime issues
+android.enableJetifier=true
