--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,22 +10,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MHike">
         <activity
+            android:name=".ConfirmDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".CreateHikeScreen"
             android:exported="false" />
         <activity
             android:name=".HomeScreen"
             android:exported="true">
-            <!--Changed the intent-filter from MainActivity to HomeScreen-->
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter></activity>
+            <!-- Changed the intent-filter from MainActivity to HomeScreen -->
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
